# ptcgp_tool

./: .gitignore  Cargo.toml  README.md  build.rs  build_versions.ps1
src/: main.rs
src/archive/: apk.rs  mod.rs  xapk.rs
src/binary/: arm64.rs  elf.rs  hex_pattern.rs  mod.rs  search.rs
src/commands/: mod.rs
src/commands/cli/: logger.rs  mod.rs
src/commands/patch/: function_hashes.rs  hash_constants.rs  mod.rs  section_hashes.rs
src/commands/proto/: extractor.rs  mod.rs
src/commands/tui/: commands.rs  logger.rs  mod.rs  themes.rs  utils.rs
src/crypto/: global_metadata.rs  mod.rs
src/hash/: il2cpp_code_hasher.rs  mod.rs
src/proto/: circular.rs  field.rs  map.rs  message.rs  mod.rs  one_of.rs  package.rs  proto_enum.rs  schema.rs  service.rs
src/proto/writer/: field.rs  map.rs  message.rs  message_group.rs  mod.rs  one_of.rs  proto_enum.rs  service.rs
src/unity/: blob_value.rs  complex_type.rs  global_metadata.rs  il2cpp.rs  il2cpp_type.rs  il2cpp_type_definition.rs  mod.rs  unity_loader.rs
src/utils/: consts.rs  file_backed_cache.rs  mod.rs  read_only.rs
src/xapk/: apk.rs  mod.rs  xapk.rs
