[package]
name = "ptcgp_tool"
version = "0.1.0"
edition = "2024"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[dependencies]
snmalloc-rs = { version = "0.3.8", features = ["native-cpu"] }
goblin = { version = "0.9.3", default-features = false, features = ["elf64", "elf32", "endian_fd", "std"] }
memchr = "2.7.4"
phf = { version = "0.11.3", features = ["macros"] }
paste = "1.0.15"
heck = "0.5.0"
nohash-hasher = "0.2.0"
zip = "2.2.3"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
clap = { version = "4.5.31", features = ["derive"] }
itertools = "0.14.0"
petgraph = "0.7.1"
aes = "0.8.4"
ctr = "0.9.2"
rayon = "1.10.0"
parking_lot = "0.12.3"
hashbrown = { version = "0.15.2", features = ["serde"] }
log = { version = "0.4.26", features = ["kv"] }
anyhow = { version = "1.0.96", features = ["backtrace"] }
once_cell = "1.20.3"
foldhash = "0.1.4"
directories = "6.0.0"