[package]
name = "ptcgp_tool"
version = "0.1.0"
edition = "2024"
authors = ["ThievingSix"]
description = "A multi-tool for interacting wit PTCGP."
rust-version = "1.85.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[dependencies]
# --- Cryptography ---
aes = "0.8.4"
ctr = "0.9.2"

# --- Command-line Parsing ---
clap = { version = "4.5.34", features = ["derive"] }

# --- Formatting and Compile-Time Constants ---
const_format = { version = "0.2.34", features = ["fmt"] }
paste = "1.0.15"

# --- Terminal UI ---
cursive = { version = "0.21.1", features = ["builder", "markdown"] }
cursive-aligned-view = "0.7.0"
cursive-extras = "0.13.1"
rfd = "0.15.3"

# --- Error Handling & Logging ---
anyhow = { version = "1.0.97", features = ["backtrace"] }
log = { version = "0.4.27", features = ["kv", "std", "serde"] }

# --- Filesystem Utilities ---
directories = "6.0.0"

# --- Binary and Executable Utilities ---
foldhash = "0.1.5"

# --- Binary Parsing ---
goblin = { version = "0.9.3", default-features = false, features = ["elf64", "elf32", "endian_fd", "std"] }

# --- Data Structures & Algorithms ---
hashbrown = { version = "0.15.2", features = ["serde"] }
petgraph = "0.7.1"
phf = { version = "0.11.3", features = ["macros"] }

# --- Miscellaneous Utilities ---
heck = "0.5.0"
itertools = "0.14.0"
memchr = "2.7.4"
nohash-hasher = "0.2.0"
once_cell = "1.21.3"
parking_lot = "0.12.3"
rayon = "1.10.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
snmalloc-rs = { version = "0.3.8", features = ["native-cpu"] }
strum = { version = "0.27.1", features = ["derive"] }
zip = "2.5.0"

[features]
default = ["2022356f1"]
2022322f1 = []
2022356f1 = []